# ChangeLog for dev-lang/fpc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/fpc/ChangeLog,v 1.55 2011/12/11 23:42:14 radhermit Exp $

*fpc-2.4.4 (11 Dec 2011)

  11 Dec 2011; Tim Harder <radhermit@gentoo.org> +fpc-2.4.4.ebuild,
  metadata.xml:
  Version bump (bug #363677 by Michal Janke). Add the ide USE flag to replace
  the fpc-ide package.

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> fpc-2.4.0.ebuild:
  sparc stable wrt #345663

  13 Jan 2011; Brent Baude <ranger@gentoo.org> fpc-2.4.0.ebuild:
  stable ppc, bug 345663

  20 Nov 2010; Markos Chandras <hwoarang@gentoo.org> fpc-2.4.0.ebuild:
  Stable on amd64 wrt bug #345663

  18 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> fpc-2.4.0.ebuild:
  x86 stable wrt bug #345663

*fpc-2.4.0 (16 Jan 2010)

  16 Jan 2010; Harald van Dĳk <truedfx@gentoo.org> +fpc-2.4.0.ebuild:
  Version bump, bug #299525

*fpc-2.2.4-r2 (22 Jul 2009)

  22 Jul 2009; Harald van Dĳk <truedfx@gentoo.org> -fpc-2.2.4.ebuild,
  -fpc-2.2.4-r1.ebuild, +fpc-2.2.4-r2.ebuild:
  Re-add RESTRICT=strip (#269221); drop FEATURES misuse (#278740)

*fpc-2.2.4-r1 (09 Jun 2009)

  09 Jun 2009; Harald van Dĳk <truedfx@gentoo.org> +fpc-2.2.4-r1.ebuild:
  Install HTML documentation instead of PDF files, so that fpc-ide can
  display it. Drop warning about -Xs.

*fpc-2.2.4 (23 Apr 2009)

  23 Apr 2009; Harald van Dĳk <truedfx@gentoo.org>
  +files/fpc-2.2.4-execstack.patch, +fpc-2.2.4.ebuild:
  Version bump (bug #266988)

*fpc-2.2.2-r1 (10 Mar 2009)

  14 Mar 2009; Harald van Dĳk <truedfx@gentoo.org>
  +files/fpc-2.2.2-execstack.patch, -fpc-2.0.0-r1.ebuild, -fpc-2.0.2.ebuild,
  -fpc-2.0.4.ebuild, -fpc-2.2.2.ebuild, +fpc-2.2.2-r1.ebuild:
  Drop RESTRICT=strip, now that binutils is fixed (#183725)
  Pick noexecstack bits from upstream (#228867)
  Remove older versions

  16 Dec 2008; Harald van Dĳk <truedfx@gentoo.org> fpc-2.0.4.ebuild,
  fpc-2.2.0.ebuild, fpc-2.2.0-r1.ebuild, fpc-2.2.2.ebuild: