@@ -39,17 +39,17 @@ EBUILD fpc-2.2.0.ebuild 4201 RMD160 53fb252731827d35ef08777c87c2170d78a7aa2b SHA
 EBUILD fpc-2.2.2-r1.ebuild 4431 RMD160 7e6de90bb0e5817cb22c484ccdf9d0221f0569fa SHA1 86651adfb74b7ca88fddcea2ba8d7231aee6ba76 SHA256 2947b56d2c62ce2d349b8cc9e4178c530778e5851c22fe7918c46a99ac218408
 EBUILD fpc-2.2.4-r2.ebuild 3895 RMD160 bf22685e229a1d64faa4a42ed3b142f6fdd3fc9f SHA1 8b18ee6c745d56fb8ea5722841cd5418d2eda610 SHA256 56e99ec3a55cbc010e0ffe3a2a4f9c4f21933d782fc31fe219fa945cd12707cb
 EBUILD fpc-2.4.0.ebuild 3881 RMD160 bf6ba66d1eb255724a7b5d58628ee30f52b9f205 SHA1 84664ad297eb5df2aab7a3cbe2f12eac84bfa021 SHA256 3390490e4acc35566b6c6adba4ea3a2328a368f29aa6d576252f4d1b05d2c4e5
-EBUILD fpc-2.4.4.ebuild 4183 RMD160 527dffb21357f5ed777fa36f095b451638c476f8 SHA1 77b5fa2c21162aa0eb496c708d5cf7e483e00341 SHA256 fb49b04450d6d1d8ee26e939edb19d954421de698244b7bc14029cb5b8004a33
-MISC ChangeLog 7020 RMD160 48a7872f9945d7d485320bcc53580ca4765881bd SHA1 1c376e361f9b9aa2fc8b8e70f95d360c61d04ec8 SHA256 66df86d1738036556afc623a23af562f77e55b7cd458a9c35c2772693398fa1d
+EBUILD fpc-2.4.4.ebuild 3812 RMD160 692cff684c5c225849a6bbd82e2788257e116d03 SHA1 40a0069254127eff64afab769426b929b27db162 SHA256 c13c15c2af158cba1b18f89c64242ec8bd89f5c6be15ab45c69e7adfb73f1e49
+MISC ChangeLog 7160 RMD160 8d06b678756b36594087a84d032de5fba0fa372c SHA1 2787e6ea4501995c917aedfe94b9262fe87b5bbc SHA256 9ad7cee218e02e9d6d0af77100447cdd5acf75b38ba4481d09a1417a0a4931b8
 MISC metadata.xml 251 RMD160 9a0651c3c39bc148d9aa9e4efbd6c1be74200916 SHA1 19b42ff88e6afe233acaa93f4f7d4ee20fe5313d SHA256 5e64453397ac86a70519ff062544e29c087fe71e83fb4693da25f4b6b8df612a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJO5T/iAAoJEEqz6FtPBkyjGO8H/iRqHhJSO+ygHs6gtdHcThoY
-7+OiiYBc7WRQvGBvSN0r4I8B+lRwbOvklau7ic2irBiZ2Q5zTgJpI11DY7HRacfS
-DGdMb+xGH1NwUI+zlx6A1UEFPFGQ9qwaLCwG4u/Iynqu/tFnne9AIoUcE2Nd3tPB
-RiSuzbAg95wg2Y18Juws0+4I18p/lRwX4/5s/1DR2yFH+xu2TcYVTyNlWBwOhDxC
-5LZjvEdBBEOh+/QmOCxmFX4/9K8lzjeQ6jjDyfBiI8ymU2/ZCb6fQKFZslCstNK4
-Tse6PEwCRG6gTvuCEAwh6bAdK69CtMZiaBEoUpD11suE16V5pfooKPjHkEZ4lOA=
-=z0iN
+iQEcBAEBCgAGBQJO5pEHAAoJEEqz6FtPBkyjB1oIALdCkAcycvjrPf4OguYqm04/
+CGOv8L297JMGZzL7k0/XFG+kVDoGLv0jqDgsCJ5HoHVGWuCCcoLcbp9Ce1Tzq1wj
+Xh+GJ1520e/z8HGhWm7JdSnyKqiEPxzuG9hskHbU20GM+W7Aniv0u3/IpKRjzmj7
+EVzJ1HtIMcEY6SmQxiBxJoRsT70aebNZc4EZ5mlFbkALlNyRQPrqIhMUqbc1HcRn
+lurtnlY/jFUAZ98iVnetqOD9N2S8NWN6ZJfkc2aEW35AHY/RL3GDc+A0V3czAbDH
+ANktHsri3fP7KAFlMYauaK8zwC4qbirvEfEKs8kXmgUNgmylLnAi59IJ2ICoPdk=
+=i6CC
 -----END PGP SIGNATURE-----
